Adding tokenization example

--- a/Regex.ipynb
+++ b/Regex.ipynb
@@ -172,6 +172,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['34567884']"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l='I am 29 years old and my phone is: (9)34567884'\n",
+    "re.findall('[0-9+]{6,8}', l)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
