Added spelling recomender

--- a/Normalization_Stemming.ipynb
+++ b/Normalization_Stemming.ipynb
@@ -17,12 +17,16 @@
     "import gensim\n",
     "import matplotlib.pyplot as plt\n",
     "from wordcloud import WordCloud, ImageColorGenerator\n",
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "from nltk.corpus import words\n",
+    "from nltk.metrics.distance import jaccard_distance\n",
+    "from nltk.util import ngrams\n",
+    "from nltk.metrics.distance  import edit_distance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -30,34 +34,25 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: nltk in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (3.5)\n",
-      "Requirement already satisfied: tqdm in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from nltk) (4.50.2)\n",
-      "Requirement already satisfied: regex in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from nltk) (2020.10.15)\n",
-      "Requirement already satisfied: joblib in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from nltk) (0.17.0)\n",
       "Requirement already satisfied: click in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from nltk) (7.1.2)\n",
+      "Requirement already satisfied: joblib in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from nltk) (0.17.0)\n",
+      "Requirement already satisfied: regex in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from nltk) (2020.10.15)\n",
+      "Requirement already satisfied: tqdm in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from nltk) (4.50.2)\n",
       "Requirement already satisfied: gensim in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (3.8.3)\n",
-      "Requirement already satisfied: numpy>=1.11.3 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from gensim) (1.19.2)\n",
-      "Requirement already satisfied: scipy>=0.18.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from gensim) (1.5.2)\n",
       "Requirement already satisfied: smart-open>=1.8.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from gensim) (4.2.0)\n",
       "Requirement already satisfied: six>=1.5.0 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from gensim) (1.15.0)\n",
-      "Collecting wordcloud\n",
-      "  Downloading wordcloud-1.8.1.tar.gz (220 kB)\n",
-      "\u001b[K     |████████████████████████████████| 220 kB 992 kB/s eta 0:00:01\n",
-      "\u001b[?25hRequirement already satisfied: numpy>=1.6.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from wordcloud) (1.19.2)\n",
-      "Requirement already satisfied: pillow in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from wordcloud) (8.0.1)\n",
+      "Requirement already satisfied: scipy>=0.18.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from gensim) (1.5.2)\n",
+      "Requirement already satisfied: numpy>=1.11.3 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from gensim) (1.19.2)\n",
+      "Requirement already satisfied: wordcloud in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (1.8.1)\n",
+      "Requirement already satisfied: numpy>=1.6.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from wordcloud) (1.19.2)\n",
       "Requirement already satisfied: matplotlib in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from wordcloud) (3.3.2)\n",
+      "Requirement already satisfied: pillow in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from wordcloud) (8.0.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (2.8.1)\n",
+      "Requirement already satisfied: certifi>=2020.06.20 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (2020.6.20)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (0.10.0)\n",
       "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (1.3.0)\n",
       "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (2.4.7)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (0.10.0)\n",
-      "Requirement already satisfied: certifi>=2020.06.20 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (2020.6.20)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (2.8.1)\n",
-      "Requirement already satisfied: six in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from cycler>=0.10->matplotlib->wordcloud) (1.15.0)\n",
-      "Building wheels for collected packages: wordcloud\n",
-      "  Building wheel for wordcloud (setup.py) ... \u001b[?25ldone\n",
-      "\u001b[?25h  Created wheel for wordcloud: filename=wordcloud-1.8.1-cp38-cp38-macosx_10_9_x86_64.whl size=157998 sha256=1f418a4ea95d5c9616ac60b7e580cfe846f6d7e67fb17d348de7e0daa3a6101f\n",
-      "  Stored in directory: /Users/anmarphy/Library/Caches/pip/wheels/4d/3f/0d/a2ba9b7895c9f1be89018b3141c3df3d4f9c786c882ccfbc3b\n",
-      "Successfully built wordcloud\n",
-      "Installing collected packages: wordcloud\n",
-      "Successfully installed wordcloud-1.8.1\n"
+      "Requirement already satisfied: six>=1.5 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from python-dateutil>=2.1->matplotlib->wordcloud) (1.15.0)\n"
      ]
     },
     {
@@ -69,7 +64,9 @@
       "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package wordnet to\n",
       "[nltk_data]     /Users/anmarphy/nltk_data...\n",
-      "[nltk_data]   Package wordnet is already up-to-date!\n"
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package words to /Users/anmarphy/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/words.zip.\n"
      ]
     },
     {
@@ -78,7 +75,7 @@
        "True"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,15 +85,9 @@
     "!pip install gensim\n",
     "!pip install wordcloud\n",
     "nltk.download('stopwords')\n",
-    "nltk.download('wordnet')"
+    "nltk.download('wordnet')\n",
+    "nltk.download('words')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -589,6 +580,92 @@
     "for i in range(len(lemma_text)):\n",
     "    lemma_text[i] = ps.stem(lemma_text[i])\n",
     "print(lemma_text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## N-grams.\n",
+    "### Spelling Recomender"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Autocorrect based on Jaccard distance: For every misspelled word, the recommender'd find the word with the shortest distance and starts with the same letter as the misspelled word."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "spelling\n",
+      "misspelling\n",
+      "recommender\n",
+      "corpulent\n",
+      "\n",
+      "\n",
+      "shieling\n",
+      "misspelling\n",
+      "recco\n",
+      "cormus\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "correct_spellings = words.words()\n",
+    "gram_numbers=[2,4]\n",
+    "entries=['spleling', 'mispelling', 'reccomender', 'cormulent']\n",
+    "for gram_number in gram_numbers:\n",
+    "    for entry in entries:\n",
+    "        temp = [(jaccard_distance(set(ngrams(entry, gram_number)), set(ngrams(w, gram_number))),w) for w in correct_spellings if w[0]==entry[0]]\n",
+    "        print(sorted(temp, key = lambda val:val[0])[0][1])\n",
+    "    print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Edit distance between two words is the minimum number of operations (consisting of insertions, deletions or substitutions of a single character, or transposition of two adjacent characters) required to change one word into the other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apeling', 'misspelling', 'recommender', 'corpulent']"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def edit_dist_autcorrector(entries=entries):\n",
+    "    \n",
+    "    outcomes = []\n",
+    "    for entry in entries:\n",
+    "        distances = ((edit_distance(entry, word), word) for word in correct_spellings)\n",
+    "        closest = min(distances)\n",
+    "        outcomes.append(closest[1])\n",
+    "    return outcomes\n",
+    "    \n",
+    "edit_dist_autcorrector()"
    ]
   },
   {
