Added predicting text example

--- a/Normalization_Stemming.ipynb
+++ b/Normalization_Stemming.ipynb
@@ -21,12 +21,15 @@
     "from nltk.corpus import words\n",
     "from nltk.metrics.distance import jaccard_distance\n",
     "from nltk.util import ngrams\n",
-    "from nltk.metrics.distance  import edit_distance"
+    "from nltk.metrics.distance  import edit_distance\n",
+    "from nltk.corpus import reuters\n",
+    "from nltk import bigrams, trigrams\n",
+    "from collections import Counter, defaultdict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -34,24 +37,24 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: nltk in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (3.5)\n",
-      "Requirement already satisfied: click in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from nltk) (7.1.2)\n",
-      "Requirement already satisfied: joblib in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from nltk) (0.17.0)\n",
       "Requirement already satisfied: regex in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from nltk) (2020.10.15)\n",
+      "Requirement already satisfied: joblib in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from nltk) (0.17.0)\n",
       "Requirement already satisfied: tqdm in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from nltk) (4.50.2)\n",
+      "Requirement already satisfied: click in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from nltk) (7.1.2)\n",
       "Requirement already satisfied: gensim in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (3.8.3)\n",
-      "Requirement already satisfied: smart-open>=1.8.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from gensim) (4.2.0)\n",
       "Requirement already satisfied: six>=1.5.0 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from gensim) (1.15.0)\n",
-      "Requirement already satisfied: scipy>=0.18.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from gensim) (1.5.2)\n",
+      "Requirement already satisfied: smart-open>=1.8.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from gensim) (4.2.0)\n",
       "Requirement already satisfied: numpy>=1.11.3 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from gensim) (1.19.2)\n",
+      "Requirement already satisfied: scipy>=0.18.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from gensim) (1.5.2)\n",
       "Requirement already satisfied: wordcloud in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (1.8.1)\n",
-      "Requirement already satisfied: numpy>=1.6.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from wordcloud) (1.19.2)\n",
       "Requirement already satisfied: matplotlib in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from wordcloud) (3.3.2)\n",
+      "Requirement already satisfied: numpy>=1.6.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from wordcloud) (1.19.2)\n",
       "Requirement already satisfied: pillow in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from wordcloud) (8.0.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (2.8.1)\n",
       "Requirement already satisfied: certifi>=2020.06.20 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (2020.6.20)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (0.10.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (1.3.0)\n",
       "Requirement already satisfied: pyparsing!=2.0.4,!=2.1.2,!=2.1.6,>=2.0.3 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (2.4.7)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (2.8.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (1.3.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from matplotlib->wordcloud) (0.10.0)\n",
       "Requirement already satisfied: six>=1.5 in /Users/anmarphy/opt/anaconda3/lib/python3.8/site-packages (from python-dateutil>=2.1->matplotlib->wordcloud) (1.15.0)\n"
      ]
     },
@@ -66,7 +69,9 @@
       "[nltk_data]     /Users/anmarphy/nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n",
       "[nltk_data] Downloading package words to /Users/anmarphy/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/words.zip.\n"
+      "[nltk_data]   Package words is already up-to-date!\n",
+      "[nltk_data] Downloading package reuters to\n",
+      "[nltk_data]     /Users/anmarphy/nltk_data...\n"
      ]
     },
     {
@@ -75,7 +80,7 @@
        "True"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +91,8 @@
     "!pip install wordcloud\n",
     "nltk.download('stopwords')\n",
     "nltk.download('wordnet')\n",
-    "nltk.download('words')"
+    "nltk.download('words')\n",
+    "nltk.download('reuters')"
    ]
   },
   {
@@ -666,6 +672,108 @@
     "    return outcomes\n",
     "    \n",
     "edit_dist_autcorrector()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predicting text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another application of n_grams is for predicting text. And it is combined with DL to generate text in Chatbots."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# code courtesy of https://nlpforhackers.io/language-models/\n",
+    "model = defaultdict(lambda: defaultdict(lambda: 0))\n",
+    "for sentence in reuters.sents():\n",
+    "    for w1, w2, w3 in trigrams(sentence, pad_right=True, pad_left=True):\n",
+    "        model[(w1, w2)][w3] += 1\n",
+    "for w1_w2 in model:\n",
+    "    total_count = float(sum(model[w1_w2].values()))\n",
+    "    for w3 in model[w1_w2]:\n",
+    "        model[w1_w2][w3] /= total_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(<function __main__.<lambda>.<locals>.<lambda>()>,\n",
+       "            {'to': 0.036303630363036306,\n",
+       "             \"'\": 0.5247524752475248,\n",
+       "             'enjoyed': 0.006600660066006601,\n",
+       "             'said': 0.0165016501650165,\n",
+       "             'in': 0.019801980198019802,\n",
+       "             '.': 0.066006600660066,\n",
+       "             'reduces': 0.0033003300330033004,\n",
+       "             'with': 0.0033003300330033004,\n",
+       "             'had': 0.009900990099009901,\n",
+       "             'will': 0.013201320132013201,\n",
+       "             'and': 0.0231023102310231,\n",
+       "             'for': 0.006600660066006601,\n",
+       "             ',': 0.0627062706270627,\n",
+       "             'regains': 0.006600660066006601,\n",
+       "             ',\"': 0.006600660066006601,\n",
+       "             'imports': 0.0033003300330033004,\n",
+       "             'would': 0.019801980198019802,\n",
+       "             'following': 0.0033003300330033004,\n",
+       "             'is': 0.009900990099009901,\n",
+       "             'on': 0.006600660066006601,\n",
+       "             'deserved': 0.0033003300330033004,\n",
+       "             'under': 0.0033003300330033004,\n",
+       "             'must': 0.0033003300330033004,\n",
+       "             'cheaper': 0.0033003300330033004,\n",
+       "             'space': 0.0033003300330033004,\n",
+       "             '\"': 0.006600660066006601,\n",
+       "             'has': 0.0165016501650165,\n",
+       "             'asking': 0.006600660066006601,\n",
+       "             'was': 0.0165016501650165,\n",
+       "             'where': 0.0033003300330033004,\n",
+       "             'aims': 0.0033003300330033004,\n",
+       "             'reached': 0.0033003300330033004,\n",
+       "             'some': 0.0033003300330033004,\n",
+       "             'if': 0.0033003300330033004,\n",
+       "             'from': 0.0033003300330033004,\n",
+       "             'may': 0.0033003300330033004,\n",
+       "             'of': 0.009900990099009901,\n",
+       "             'but': 0.0033003300330033004,\n",
+       "             'switches': 0.0033003300330033004,\n",
+       "             'promoting': 0.0033003300330033004,\n",
+       "             'cannot': 0.006600660066006601,\n",
+       "             'each': 0.0033003300330033004,\n",
+       "             'recover': 0.0033003300330033004,\n",
+       "             'does': 0.0033003300330033004,\n",
+       "             'a': 0.0033003300330033004,\n",
+       "             'never': 0.006600660066006601,\n",
+       "             'can': 0.0033003300330033004,\n",
+       "             'went': 0.0033003300330033004,\n",
+       "             'ranged': 0.0033003300330033004,\n",
+       "             '50': 0.0033003300330033004,\n",
+       "             'avoid': 0.006600660066006601})"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model['the', 'country']"
    ]
   },
   {
