Added Naive Bayes

--- a/Classification_models.ipynb
+++ b/Classification_models.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sentiment Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* [Data Acquisition](#Data-Acquisition)\n",
+    "* [Discovery](#Discovery)\n",
+    "* [Naive Bayes Model](#Naive-Bayes-Model)\n",
+    "* [Logistic Regression](#Logistic-Regression)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,26 +25,37 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import sklearn\n",
     "import matplotlib.pyplot as plt\n",
     "import re\n",
     "import string\n",
     "import nltk                                  \n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import PorterStemmer\n",
-    "from nltk.tokenize import TweetTokenizer"
+    "from nltk.tokenize import TweetTokenizer\n",
+    "import sklearn\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "from sklearn.metrics import f1_score\n",
+    "from sklearn.feature_extraction.text import CountVectorizer"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.kaggle.com/crowdflower/twitter-airline-sentiment"
+    "## Data Acquisition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dataset was downloaded from [Kaggle](https://www.kaggle.com/crowdflower/twitter-airline-sentiment)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +228,7 @@
        "4  2015-02-24 11:14:45 -0800            NaN  Pacific Time (US & Canada)  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,8 +239,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Discovery"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +276,7 @@
        "Name: airline_sentiment, dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +419,7 @@
        "All                    9178     3099      2363  14640"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -520,20 +555,20 @@
        "6  @VirginAmerica yes, nearly every time I fly VX...          positive"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tweet_df = dataset[dataset['airline_sentiment'] != 'neutral']\n",
+    "tweet_df = dataset[dataset['airline_sentiment'] != 'neutral'] #Removing the tweets associated with neutral reviews\n",
     "tweet_df=tweet_df[['text','airline_sentiment']]\n",
     "tweet_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -543,7 +578,7 @@
        " Index(['positive', 'negative'], dtype='object'))"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +599,7 @@
        "array([0, 1, 1, ..., 0, 1, 1])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -587,7 +622,7 @@
        " \"@VirginAmerica and it's a really big bad thing about it\"]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +644,7 @@
     "        tweet: a string containing a tweet\n",
     "    Output:\n",
     "        tweets_clean: a list of words containing the processed tweet\n",
-    "\n",
+    "    \n",
     "    \"\"\"\n",
     "    stemmer = PorterStemmer()\n",
     "    stopwords_english = stopwords.words('english')\n",
@@ -640,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +684,7 @@
        "['plu', 'ad', 'commerci', 'experi', '...', 'tacki']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,9 +729,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1705,7 +1740,7 @@
        " ...}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1717,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1760,7 +1795,7 @@
        " ['👏', 7, 20]]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1771,23 +1806,18 @@
     "        'email','call','respons','problem','custom', 'service',\n",
     "         ':)', ':(', '😊','😒', '😬', '😄', '😍', '😡', '😢','👎' ,'👏']\n",
     "\n",
-    "# list representing our table of word counts.\n",
     "# each element consist of a sublist with this pattern: [<word>, <positive_count>, <negative_count>]\n",
     "data = []\n",
-    "\n",
     "for word in keys:\n",
     "    \n",
     "    # initializing counts\n",
     "    pos = 0\n",
     "    neg = 0\n",
-    "    \n",
     "    if (word, 1) in freqs:\n",
     "        pos = freqs[(word, 1)]\n",
-    "        \n",
     "    if (word, 0) in freqs:\n",
     "        neg = freqs[(word, 0)]\n",
     "        \n",
-    "    # append the word counts to the table\n",
     "    data.append([word, pos, neg])\n",
     "    \n",
     "data"
@@ -1795,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1834,23 +1864,179 @@
     "\n",
     "# convert positive raw counts to logarithmic scale. we add 1 to avoid log(0)\n",
     "x = np.log([x[1] + 1 for x in data])  \n",
-    "\n",
-    "# do the same for the negative counts\n",
     "y = np.log([x[2] + 1 for x in data]) \n",
     "\n",
-    "# Plot a dot for each pair of words\n",
     "ax.scatter(x, y)  \n",
     "\n",
-    "# assign axis labels\n",
     "plt.xlabel(\"Log Negative count\")\n",
     "plt.ylabel(\"Log Positive count\")\n",
     "\n",
-    "# Add the word as the label at the same position as you added the points just before\n",
     "for i in range(0, len(data)):\n",
     "    ax.annotate(data[i][0], (x[i], y[i]), fontsize=12)\n",
     "\n",
-    "ax.plot([0, 9], [0, 9], color = 'red') # Plot the red line that divides the 2 areas.\n",
+    "ax.plot([0, 9], [0, 9], color = 'red')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentiment_label=tweet_df.airline_sentiment.factorize()\n",
+    "tweet_df['label']=sentiment_label[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(tweet_df['text'], \n",
+    "                                                    tweet_df['label'], \n",
+    "                                                    random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12087    1\n",
+       "61       1\n",
+       "5891     0\n",
+       "2668     1\n",
+       "9341     1\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12087    @AmericanAir Checked in on app since yesterday...\n",
+       "61       @VirginAmerica I called a 3-4 weeks ago about ...\n",
+       "5891     @SouthwestAir I just received your birthday ca...\n",
+       "2668     @united my flight landed 50 min, but we are be...\n",
+       "9341     @USAirways been on hold for 45 minutes. Is the...\n",
+       "Name: text, dtype: object"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Naive Bayes Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8613654430675707"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vect = CountVectorizer().fit(X_train)\n",
+    "X_train_vectorized = vect.transform(X_train)\n",
+    "\n",
+    "model = MultinomialNB(alpha=0.1)\n",
+    "model.fit(X_train_vectorized, y_train)\n",
+    "predictions = model.predict(vect.transform(X_test))\n",
+    "roc_auc_score(y_test, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 1, ..., 1, 1, 1])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_vectorized.data #Revisar mañana"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic Regression"
    ]
   },
   {
