--- a/Classification_models.ipynb
+++ b/Classification_models.ipynb
@@ -2208,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -2254,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -2263,7 +2263,7 @@
        "1930"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2274,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -2291,40 +2291,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Pendiente por revisar como se preprocesarian los tweets para retirar puntuaciones y nùmeros."
+    "model.predict(vect.transform(['That experience was terrible']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0])"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(vect.transform(['I enjoy the flight, thanks for the customer service']))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1])"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(vect.transform([':(']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding n-grams "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ROC:  0.8869254150105215 \n",
+      " Confussion_matrix: \n",
+      " [[ 526   85]\n",
+      " [ 198 2077]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''analyzer='char_wb' which creates character n-grams only from text inside word boundaries. This should make the model more robust to spelling mistakes.'''\n",
+    "\n",
+    "vect = CountVectorizer(min_df=5, \n",
+    "                       ngram_range=(2,5), \n",
+    "                       analyzer='char_wb'                    \n",
+    "                      ).fit(X_train) \n",
+    "X_train_vectorized = vect.transform(X_train)\n",
+    "\n",
+    "model = MultinomialNB(alpha=0.1)\n",
+    "model.fit(X_train_vectorized, y_train)\n",
+    "predictions = model.predict(vect.transform(X_test))\n",
+    "\n",
+    "classification_report(y_test, predictions)   "
+   ]
   },
   {
    "cell_type": "markdown",
