References were added and Glove review is on hold

--- a/Embeddings.ipynb
+++ b/Embeddings.ipynb
@@ -1458,12 +1458,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "GloVe is a word vector technique . Its advantage  is that, unlike Word2vec, GloVe does not rely just on local statistics (local context information of words), but incorporates global statistics (word co-occurrence) to obtain word vectors. \n",
-    "\n",
-    "Word2Vec: you get a large corpus, and make a dataset of tuples, where each tuple contains (some word x, a word in the context of x). the semantics learnt for a given word, is only affected by the surrounding words. Word2vec which captures local statistics do very well in analogy tasks. \n",
-    "\n",
-    "Glove: You can derive semantic relationships between words from the co-occurrence matrix.\n",
-    "\n"
+    "GloVe is a word vector technique . Its advantage  is that, unlike Word2vec, GloVe does not rely just on local statistics (local context information of words), but incorporates global statistics (word co-occurrence) to obtain word vectors. Glove: You can derive semantic relationships between words from the co-occurrence matrix.\n",
+    "- Come back after studying sequential models in DL\n"
    ]
   },
   {
@@ -1483,7 +1479,8 @@
     "* https://www.kdnuggets.com/2018/04/robust-word2vec-models-gensim.html\n",
     "* https://radimrehurek.com/gensim/models/word2vec.html\n",
     "* https://nbviewer.jupyter.org/github/AprendizajeProfundo/Diplomado/blob/master/Temas/Módulo%208-%20Aprendizaje%20Profundo%20II/1.%20Procesamiento%20de%20Lenguaje%20natural/Cuadernos/nlp_word2vec.ipynb\n",
-    "* https://www.kdnuggets.com/2018/04/implementing-deep-learning-methods-feature-engineering-text-data-cbow.html"
+    "* https://www.kdnuggets.com/2018/04/implementing-deep-learning-methods-feature-engineering-text-data-cbow.html\n",
+    "* https://madewithml.com/courses/ml-foundations/embeddings/ "
    ]
   },
   {
