Added email rule

--- a/Regex.ipynb
+++ b/Regex.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Regular Expressions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +70,7 @@
        "['D', 'R', 'B']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,6 +78,27 @@
    "source": [
     "t='we should call it ‘DRrenched Blossoms'\n",
     "re.findall('[A-Z]', t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['DR', 'B']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t='we should call it ‘DRrenched Blossoms'\n",
+    "re.findall('[A-Z]+', t)"
    ]
   },
   {
@@ -189,6 +217,54 @@
    "source": [
     "l='I am 29 years old and my phone is: (9)34567884'\n",
     "re.findall('[0-9+]{6,8}', l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "learning makes me happy. i am happy because. i am learning?ñ! \n"
+     ]
+    }
+   ],
+   "source": [
+    "corpus = \"learning% makes 'me' happy. i am happy be-cause i am learning?ñ! :)\"\n",
+    "corpus = re.sub(r\"[^a-zA-Zñ0-9.?! ]+\", \"\", corpus)\n",
+    "print(corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus='In my past I used to have many emails: anm@hotmial.com, mhuer@ped.edu.co, andre-22@hto.com, but I decided to deleted all of them and only have a new one'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['anm@hotmial.com', 'mhuer@ped.edu', 'andre-22@hto.com']"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(r'[A-Za-z0-9.-]+@[A-Za-z]+.[A-Za-z]+', corpus)"
    ]
   },
   {
